--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,42 @@
+*.desktop
 *.directory
 *.git/
 *__pycache__/
 *.code-workspace
-
 *.FCBak
-
-*.desktop
-
 *.env
 venv*
 
+## Backup images
+*.img.gz
+
 Datasheets/
 GH_SSHUnlockLUKS/
+GH_rockpi-penta/
 secrets/
 omv/
 
-/home_pi/.ssh/
-/home_pi/.config/
-/home_pi/bin/restic_*
-/home_pi/certs/
+## Secrets & user settings
+home_pi/.ssh/
+home_pi/.config/
+home_pi/certs/
+home_pi/screenlog.*
 
+## Personal ToDo list
 TODO.lst
+
+## Binaries
+home_pi/.cargo/
+home_pi/bin/restic_*
+
+## Symlinks
+home_pi/howto_check_restic_repo.sh
+home_pi/howto_restic.sh
+home_pi/restic
+home_pi/resticrustic.sh
+home_pi/rsnapshot.sh
+home_pi/rustic
+home_pi/unlock_LUKSdata_wget.sh
+home_pi/unlock_LUKSesata.sh
+
 
